--- a/gdb.in
+++ b/gdb.in
@@ -1,8 +1,15 @@
+# The logging file setting
+set logging file gdb.log
+set logging overwrite on
+set logging redirect
+set logging on
+
+# Main GDB section
 file main.elf
 target remote :3333
 set $osp = $sp
 set $sp = $sp - 16
-b main.c:4
+b main.c:5
 c
 call RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOA | RCC_APB2Periph_AFIO, ENABLE)
 call RCC_APB1PeriphClockCmd(RCC_APB1Periph_USART2, ENABLE)
@@ -18,9 +25,20 @@ call USART_StructInit((USART_InitTypeDef*)$osp)
 call USART_Init(USART2, $osp)
 call USART_Cmd(USART2, ENABLE)
 c
-call USART_SendData(USART2, 'H')
-call USART_SendData(USART2, 'e')
-call USART_SendData(USART2, 'l')
-call USART_SendData(USART2, 'l')
-call USART_SendData(USART2, 'o')
-call USART_SendData(USART2, '!')
+# Dump the string to binary file
+set variable $string_mem=test_string
+dump binary memory test-string.bin $string_mem $string_mem+7
+
+# Read from testing string and output to USART
+while ( *(char *) $string_mem != '\0' )
+call USART_SendData( USART2, *( char * )$string_mem )
+set $string_mem = $string_mem + 1
+end
+
+# restore the binary file and than output to the GDB session
+restore test-string.bin binary $string_mem
+printf "%s", $string_mem
+
+# Terminate and Quit gdb
+set logging off
+quit
