Only take the test_string as the context of the log file

--- a/gdb.in
+++ b/gdb.in
@@ -1,9 +1,3 @@
-# The logging file setting
-set logging file gdb.log
-set logging overwrite on
-set logging redirect
-set logging on
-
 # Main GDB section
 file main.elf
 target remote :3333
@@ -27,18 +21,17 @@ call USART_Cmd(USART2, ENABLE)
 c
 # Dump the string to binary file
 set variable $string_mem=test_string
-dump binary memory test-string.bin $string_mem $string_mem+7
+dump binary memory gdb.log $string_mem $string_mem+7
 
 # Read from testing string and output to USART
 while ( *(char *) $string_mem != '\0' )
-call USART_SendData( USART2, *( char * )$string_mem )
-set $string_mem = $string_mem + 1
+	call USART_SendData( USART2, *( char * )$string_mem )
+	set $string_mem = $string_mem + 1
 end
 
 # restore the binary file and than output to the GDB session
-restore test-string.bin binary $string_mem
+restore gdb.log binary $string_mem
 printf "%s", $string_mem
 
 # Terminate and Quit gdb
-set logging off
 quit
